--- a/app/javascript/styles/mfc/1-foreground.css
+++ b/app/javascript/styles/mfc/1-foreground.css
@@ -9,7 +9,6 @@ base background and text
 /* status columns */
 .column>.scrollable,
 .status,
-    .status__content,
 .detailed-status,
     .detailed-status__action-bar,
     .focusable:focus .detailed-status,
@@ -31,7 +30,6 @@ base background and text
 .trends__header,
 /* new conversations */
 .conversation--unread,
-.conversation__content__names,
 /* search */
 .search__input,
     .search__input:focus,
@@ -47,13 +45,6 @@ base background and text
 .compose-form .compose-form__buttons-wrapper, /* buttons */
 .compose-form .autosuggest-textarea__textarea::placeholder,
 .compose-form .spoiler-input__input::placeholder,
-.compose-form__poll-wrapper .button.button-secondary,
-.poll__option input[type="text"],
-.privacy-dropdown__option,
-.emoji-mart-search,
-.emoji-mart-scroll,
-.language-dropdown__dropdown,
-.language-dropdown__dropdown__results__item,
 /* settings page */
 .simple_form textarea,
     .simple_form textarea:active,
@@ -83,13 +74,6 @@ base background and text
 .dashboard__counters > div > div, .dashboard__counters > div > a,
 .log-entry,
     .log-entry__header,
-.admin-wrapper .content .directory__tag h4,
-.simple_form select,
-.announcements-list__item,
-.filters-list__item,
-.permissions-list__item,
-.permissions-list__item__text__type,
-.applications-list__item, .filters-list__item,
 /* modals */
 .actions-modal,
     .actions-modal .status,
@@ -97,28 +81,19 @@ base background and text
     .status.light .display-name strong, .status.light .status__content,
 .boost-modal,
 .confirmation-modal,
-.dropdown-menu, .dropdown-menu__item a, .dropdown-menu__item button,
-.compare-history-modal,
-    .compare-history-modal .status__content,
+.dropdown-menu, .dropdown-menu__item a,
 .mute-modal,
     .block-modal .setting-toggle__label, .mute-modal .setting-toggle__label,
 .report-modal,
     .report-modal__statuses .status__content p,
     .report-modal__comment .setting-toggle__label,
-.report-dialog-modal,
-    .report-dialog-modal__lead,
-    .report-dialog-modal .poll__option.dialog-option > .poll__option__text,
-    .report-dialog-modal .status__content, .report-dialog-modal .status__content p,
 .list-editor,
     .list-editor .drawer__inner,
     .list-editor .drawer__inner.backdrop,
-    .list-adder__lists,
 .account__moved-note,
 .introduction__pager,
 .introduction__text p,
 .reactions-bar__item,
-.emoji-mart-category-label span,
-.emoji-picker-dropdown__menu,
 /* profile cards */
 .card__bar,
     .card>a:active .card__bar,
@@ -128,7 +103,6 @@ base background and text
     .directory__card__extra,
     .accounts-table__count,
     .directory__card__img,
-.scrollable .account-card,
 /* public pages */
 #new_user .lead,
 .landing .hero-widget__footer,
@@ -150,7 +124,6 @@ base background and text
     .landing-page .features-list .features-list__row .visual .fa,
     .landing-page__short-description h1,
     .landing-page .separator-or span,
-.box-widget,
     .contact-widget,
     .landing-page__information.contact-widget,
 .rich-formatting li,
@@ -166,18 +139,23 @@ base background and text
 .load-more,
 .button.button-secondary,
 .simple_form__overlay-area__overlay,
-/* about panel */
-.about__meta,
-.about__section,
-.about__section__title,
-.about__section__body,
-.prose,
-.about__header p,
-/* 4.0 mobile layout */
-.ui__header,
-.columns-area__panels__pane--navigational .navigation-panel {
+.box-widget,
+.rules-list,
+.rules-list__text {
   background: var(--bg);
   color: var(--text);
+}
+
+/* border radius for some elements*/
+.search__input,
+.navigation-bar,
+.column-header__wrapper,
+.contact-widget {
+  border-radius: 4px 4px 4px 4px;
+}
+
+.compose-form__buttons-wrapper {
+  border-radius: 0 0 4px 4px;
 }
 
 /*--------------------
@@ -195,16 +173,11 @@ override for bold text
 .account__action-bar__tab strong, /* profile counters */
 .conversation__content__names a,
 .conversation--unread .conversation__content__relative-time,
-.report-dialog-modal .poll__option.dialog-option > .poll__option__text strong,
-.account-card__counters__item,
-.privacy-dropdown__option__content strong,
 /* settings page*/
 .dashboard__counters__num, .dashboard__counters__text,
 .log-entry a,
     .log-entry .username,
     .log-entry .target,
-.announcements-list__item__title,
-.filters-list__item__title,
 /* public pages */
 #new_user .lead strong,
 .landing-page h3,
@@ -215,6 +188,8 @@ override for bold text
     .directory__tag h4,
 .rich-formatting h3,
     .rich-formatting h4,
+    .rich-formatting h2,
+    .rich-formatting,
 .public-layout .public-account-header__tabs__tabs .counter .counter-number,
 .account__header__fields dt {
   color: var(--textBold);
@@ -251,8 +226,6 @@ override for muted text
     .compose-form .compose-form__buttons-wrapper .character-counter__wrapper .character-counter,
     .compose-form .autosuggest-textarea__textarea::placeholder,
     .compose-form .spoiler-input__input::placeholder,
-    .privacy-dropdown__option__content,
-    .language-dropdown__dropdown__results__item__common-name,
 .upload-progress,
 .search__icon .fa,
     .search__icon .fa-times-circle,
@@ -269,16 +242,9 @@ a.table-action-link,
     button.table-action-link,
 .status__wrapper--filtered,
 .conversation__content__relative-time,
-.status-check-box__status .detailed-status__display-name,
-.account-card__counters__item small,
-.about__meta h4,
-.poll__link,
-.poll__footer,
 /* settings page */
 .dashboard__counters__label,
 .log-entry__timestamp,
-.announcements-list__item__meta,
-.filters-list__item__meta,
 /* public pages */
 .landing-page__short-description h1 small,
     .landing-page__short-description h1 small span,
@@ -316,37 +282,12 @@ a.table-action-link,
 .account__section-headline,
 .notification__filter-bar,
 .actions-modal .dropdown-menu__separator,
-.actions-modal .status,
-.report-dialog-modal .poll__option.dialog-option,
-.poll__option input[type="text"],
-.poll__input,
-.compose-form__poll-wrapper,
-.compose-form__poll-wrapper .poll__footer,
-.dropdown-menu__item.edited-timestamp__history__item {
+.actions-modal .status {
   border-color: var(--textMuted);
 }
 
-.table td,
-.table th,
-.ui__header,
-.columns-area__panels__pane--navigational .navigation-panel,
-.dropdown-menu__container__header,
-.list-adder .list {
-  border-color: var(--bgPage);
-}
-
 .account__header__account-note,
-.announcements-list,
-.report-dialog-modal__container,
-.about__meta__divider,
-.about__section__body,
-.compose-form__poll-wrapper .button.button-secondary,
-.announcements-list__item,
-.filters-list__item,
-.table > thead > tr > th,
-.applications-list__item,
-.filters-list__item,
-.permissions-list__item {
+.announcements-list {
   border-color: transparent;
 }
 
@@ -357,13 +298,24 @@ a.table-action-link,
   border-color: transparent transparent var(--bg);
 }
 
-/* fix profile directory card truncation */
-.scrollable .account-card__bio::after,
-.account-card__bio::after {
-  background: none;
+.notification {
+  background: var(--bgPage);
 }
 
-/* poll vote bars */
-.poll__chart {
-  background: var(--textMuted);
+/*settings page administration section text color*/
+.dashboard__widgets__users a.name-tag {
+  color: var(--text);
+}
+.dashboard__widgets a:not(.name-tag) {
+  color: var(--text) !important;
+}
+
+.account-card .account-card__bio {
+  color: var(--textHead) !important;
+}
+
+/*fixing direct messages*/
+.status__content,
+.conversation__content__names {
+    color: var(--text);
 }
